// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageAudio renders correctly as index page without url params 1`] = `
<PageAudio
  getAlbum={[Function]}
  getArtist={[Function]}
  isIndexPage={true}
>
  <Component
    id="audio"
    useBaseClass={false}
  >
    <div />
  </Component>
</PageAudio>
`;

exports[`PageAudio renders correctly with 1 url param 1`] = `
<PageAudio
  getAlbum={[Function]}
  getArtist={[Function]}
>
  <Component
    id="audio"
    useBaseClass={false}
  >
    <div />
  </Component>
</PageAudio>
`;

exports[`PageAudio renders correctly with 1 wrong url param 1`] = `
<PageAudio
  getAlbum={[Function]}
  getArtist={[Function]}
>
  <Page404>
    <div />
  </Page404>
</PageAudio>
`;

exports[`PageAudio renders correctly with 2 url params 1`] = `
<PageAudio
  getAlbum={[Function]}
  getArtist={[Function]}
>
  <Component
    id="audio"
    useBaseClass={false}
  >
    <div />
  </Component>
</PageAudio>
`;

exports[`PageAudio renders correctly with 2 wrong url params 1`] = `
<PageAudio
  getAlbum={[Function]}
  getArtist={[Function]}
>
  <Page404>
    <div />
  </Page404>
</PageAudio>
`;
